# experiment-parallel-tsp

./: .gitignore  tsp.cabal
app/: Main.hs
bench/: BenchMain.hs
src/: Main.hs  TSP.hs  TSPCalc.hs
src/TSP/: Calc.hs  Parser.hs  Types.hs
