name:                tsp
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/jlimperg/tsp#readme
license:             BSD3
license-file:        LICENSE
author:              Jannis Limperg
maintainer:          jannis@limperg.de
copyright:           (C) 2016 Jannis Limperg
category:            Education
build-type:          Simple
cabal-version:       >=1.10


executable tsp
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , array
                     , containers
                     , unordered-containers
                     , random
                     , text
  other-modules:       TSP
                     , TSPCalc
  other-extensions:    OverloadedStrings
                     , ScopedTypeVariables
  ghc-options:         -O2


benchmark tsp-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src
                     , bench
  main-is:             BenchMain.hs
  default-language:    Haskell2010
  build-depends:       base
                     , array
                     , containers
                     , unordered-containers
                     , random
                     , text

                     , criterion
  other-modules:       TSP
                     , TSPCalc
  other-extensions:    OverloadedStrings
                     , ScopedTypeVariables
  ghc-options:         -O2
