name:                tsp
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/jlimperg/tsp#readme
license:             BSD3
license-file:        LICENSE
author:              Jannis Limperg
maintainer:          jannis@limperg.de
copyright:           (C) 2016 Jannis Limperg
category:            Education
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base
                     , array
                     , containers
                     , parallel
                     , unordered-containers
                     , random
                     , text
  exposed-modules:     TSP
  other-modules:       TSPCalc
  other-extensions:    OverloadedStrings
                     , ScopedTypeVariables
  ghc-options:         -O2


executable tsp
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , parallel
                     , unordered-containers
                     , random
                     , text

                     , tsp
  other-extensions:    OverloadedStrings
  ghc-options:         -O2 -threaded -with-rtsopts=-N


benchmark tsp-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             BenchMain.hs
  default-language:    Haskell2010
  build-depends:       base
                     , random
                     , text

                     , tsp
                     , criterion
  ghc-options:         -O2 -threaded -with-rtsopts=-N
