name:                tsp
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/jlimperg/tsp#readme
license:             BSD3
license-file:        LICENSE
author:              Jannis Limperg
maintainer:          jannis@limperg.de
copyright:           (C) 2016 Jannis Limperg
category:            Education
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base
                     , array
                     , containers
                     , deepseq
                     , hashable
                     , megaparsec
                     , parallel
                     , scientific
                     , unordered-containers
                     , random
                     , text
  exposed-modules:     TSP
  other-modules:       TSP.Calc
                     , TSP.Parser
                     , TSP.Types
  other-extensions:    DeriveGeneric
                     , OverloadedStrings
                     , ScopedTypeVariables
  ghc-options:         -O2


executable tsp
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , filepath
                     , megaparsec
                     , parallel
                     , unordered-containers
                     , random
                     , text

                     , tsp
  other-extensions:    TupleSections
  ghc-options:         -O2 -threaded -with-rtsopts=-N


benchmark tsp-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             BenchMain.hs
  default-language:    Haskell2010
  build-depends:       base
                     , megaparsec
                     , random
                     , text

                     , tsp
                     , criterion
  ghc-options:         -O2 -threaded -with-rtsopts=-N
